@@ -21,6 +21,6 @@
         <oaf_attribute name="name" type="string" _value="Pointer Capture"/>
         <oaf_attribute name="description" type="string" _value="Area to lock the pointer"/>
         <oaf_attribute name="panel:category" type="string" value="Accessibility"/>
-        <oaf_attribute name="panel:icon" type="string" value="gnome-dev-mouse-optical"/>
+        <oaf_attribute name="panel:icon" type="string" value="input-mouse"/>
 </oaf_server>
 </oaf_info>
